2003.02.16 TADA Tadashi <sho@spc.gr.jp>
	* tdiary_style.rb: fix bug when subtitle has only category.

2003.02.13 TADA Tadashi <sho@spc.gr.jp>
	* 00deffault.rb: hide preferences in navi_admin when categorized view.

2003.02.13 Junichiro Kita <kita@kitaj.no-ip.com>
	* add misc/style/etdiary/etdiary_style.rb

2003.02.12 Junichiro Kita <kita@kitaj.no-ip.com>
	* merge from Test_Category.

2003.02.12 Junichiro Kita <kita@kitaj.no-ip.com>
	* tdiary/pstoreio.rb: class Diary include UncategorizableDiary.

2003.02.11 Junichiro Kita <kita@kitaj.no-ip.com>
	* wiki_style.rb, tdiary_style.rb: stripped_subtitle returns nil if @subtitle or stripped subtitle is nil.

2003.02.11 Junichiro Kita <kita@kitaj.no-ip.com>
	* plugin/category.rb, skel/category.rhtml: separate cgi parameters with ';'.

2003.02.10 Junichiro Kita <kita@kitaj.no-ip.com>
	* category.rb: valid HTML. thanks Yoshimi KURUMA <yoshimik@iris.dti.ne.jp>

2003.02.08 Junichiro Kita <kita@kitaj.no-ip.com>
	* move CategorizableDiary/UncategorizableDiary into tdiary.rb.
	* HOWTO-make-io.rd: add about category.

2003.02.08 TADA Tadashi <sho@spc.gr.jp>
	* change IO <-> style interface: IOBase#load_styles.

2003.02.06 TADA Tadashi <sho@spc.gr.jp>
	* support WikiWord and table in Wiki parser.

2003.01.22 TADA Tadashi <sho@spc.gr.jp>
	* fix the term of style.

2003.01.21 TADA Tadashi <sho@spc.gr.jp>
	* defaultio.rb: fix style require bug.
	* pstoreio.rb: fix about style.

2003.01.20 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: rescue SyntaxError in plugins, and support mod_ruby.
	* support changing describe style.

2003.01.18 TADA Tadashi <sho@spc.gr.jp>
	* HOWTO-make-plugin.html: add about HTML style generated by plugins.

2003.01.10 TADA Tadashi <sho@spc.gr.jp>
	* 00default.rb: making @prev_day and @next_day in calc_link. for navi_user
	* 00default.rb: add link elements into head: start, first, prev, next and last.

2003.01.09 TADA Tadashi <sho@spc.gr.jp>
	* 00default.rb: add title attr into specifying stylesheet.