@@ -1,5 +1,6 @@
 2003.02.16 TADA Tadashi <sho@spc.gr.jp>
 	* tdiary_style.rb: fix bug when subtitle has only category.
+	* tdiary.rb: taint Plugin instance.
 
 2003.02.13 TADA Tadashi <sho@spc.gr.jp>
 	* 00deffault.rb: hide preferences in navi_admin when categorized view.
